<resources>
    <string name="app_name">Photo Album</string>
    <string name="label_choose_image">Choose Image</string>

    <string name="error_create_file_failed">Something error in create file</string>
    <string name="error_camera_not_available">Camera is not available.</string>
    <string name="tab_effect">Effect</string>
    <string name="tab_adjust">Adjust</string>
    <string name="tab_crop">Crop</string>
    <string name="tab_merge">Merge</string>
    <string name="tab_high_light">Highlight</string>
    <string name="label_edit_activity">Edit Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_highlight_fragment">HightLight</string>
    <string name="done">Done</string>
    <string name="loading">Loading</string>
    <string name="gray_scale">Gray Scale</string>
    <string name="negative">Negative</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="adjust_light">Light</string>
    <string name="adjust_contrast">Contrast</string>
    <string name="adjust_hue">Hue</string>
    <string name="tab_color">Color</string>
    <string name="orientation">Orientation</string>
    <string name="rotate">Rotate</string>
    <string name="gamma">Gamma</string>
    <string name="sharpen">Sharpen</string>
    <string name="emboss">Emboss</string>
    <string name="noise">Noise</string>
    <string name="sketch">Sketch</string>
    <string name="label_effect_fragment">Effect</string>
    <string name="label_color_fragment">Color</string>
    <string name="label_adjust_fragment">Adjust</string>
    <string name="label_crop_fragment">Crop</string>
    <string name="label_merge_fragment">Merge</string>
    <string name="label_rotate_fragment">Rotate</string>
    <string name="collage">Collage</string>
    <string name="layout">Layout 1</string>
    <string name="collage_1">Collage 1</string>
    <string name="collage_2">Collage 2</string>
    <string name="collage_3">Collage 3</string>
    <string name="collage_4">Collage 4</string>
    <string name="collage_5">Collage 5</string>
    <string name="collage_6">Collage 6</string>
    <string name="saveImage">Save</string>
    <string name="egde_detech">Edge detection</string>
    <string name="oil_paint">Oil Paint</string>
    <string name="blur">Gaussian Blur</string>
    <string name="error_cannot_save_image">Cannot save image to sdcard</string>
    <string name="error_save_image_success">"Your image is saved to this folder "</string>
    <string name="msg_save_confirm">Do you want to save image?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share_via">Share Via</string>
    <string name="pixelate">Pixelate</string>
    <string name="storage_permission_explanation">Allow Photo Album to access your data and get all photos</string>
    <string name="write_permission_not_granted">Permission to access photos is not granted</string>
    <string name="title_image_not_chosen">Image is not choose</string>
    <!-- Movie Maker -->
    <string name="transition">Transition</string>
    <string name="duration">Duration</string>
    <string name="music">Music</string>
    <string name="duration_1sec">1s</string>
    <string name="duration_2sec">2s</string>
    <string name="duration_3sec">3s</string>
    <string name="duration_4sec">4s</string>
    <string name="duration_5sec">5s</string>
    <string name="translate">Translate</string>
    <string name="zoom">Zoom</string>
    <string name="random">Random</string>
    <string name="fade">Fade</string>
    <string name="duration_per_image">Duration per Image</string>
    <string name="export_video">Export Video</string>
    <string name="create_video">Create Video Slide</string>
    <string name="select_song">Select Song</string>
    <string name="export_complete">Export Complete!</string>
    <string name="share">Share</string>
    <string name="play">Play</string>
    <string name="swipe_to_remove">Swipe to remove an image</string>
    <string name="drag_to_reorder">Hold and drag to re-order images</string>
</resources>
