<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_90"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tip_drag_to_reorder_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_recycler_view_margin"
        android:text="@string/swipe_to_remove"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_gamma" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:src="@drawable/tip_drag_to_reorder_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_to_reorder"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_gamma" />

    <Button
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOk"
        android:layout_marginTop="@dimen/item_recycler_view_margin"
        android:text="@string/ok" />

</LinearLayout>