<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.framgia.photoalbum.ui.activity.CollageActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listFeature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_effect_layout_height"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle|end">

            <ImageView
                android:id="@+id/btnPlayPreview"
                android:layout_width="@dimen/btn_preview_size"
                android:layout_height="@dimen/btn_preview_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/item_recycler_view_margin"
                android:src="@drawable/btn_play" />

            <LinearLayout
                android:id="@+id/btnTransition"
                android:layout_width="@dimen/recycler_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/item_list_video_size"
                    android:layout_height="@dimen/item_list_video_size"
                    android:src="@drawable/ic_movie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_recycler_view_margin"
                    android:text="@string/transition" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnDuration"
                android:layout_width="@dimen/recycler_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/item_list_video_size"
                    android:layout_height="@dimen/item_list_video_size"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_recycler_view_margin"
                    android:text="@string/duration" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnMusic"
                android:layout_width="@dimen/recycler_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/item_list_video_size"
                    android:layout_height="@dimen/item_list_video_size"
                    android:src="@drawable/ic_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_recycler_view_margin"
                    android:text="@string/music" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>